Finished Video (Building FizzBuzz - Part One)
Added Newly designed Fizz Buzz logos.
Added logos to index, app, code.html
Added new section to index, code, app.html.
Created 3 functions for within site.js.
Added colors in site.css to display when fizz - fizzbuzz was shown on screen.

--- a/css/site.css
+++ b/css/site.css
@@ -62,6 +62,18 @@ footer .social>a:hover{
     color: var(--secondary-color)
 }
 
+.Fizz{
+    color: darkgreen;
+}
+
+.Buzz{
+    color: darkblue;
+}
+
+.FizzBuzz{
+    color: red;
+    font-weight: bold;
+}
 code[class*="language-"],
     pre[class*="language-"] {
         white-space: pre-wrap;
